Pre-release
    - Simplified unit testing, now you can run tests with 'ctest' or
      'make test'. Use 'GTEST_COLOR=1 ARGS="-V" make test' or 
      'GTEST_COLOR=1 ctest -V' for coloured verbose testing output.
    - CMake minimum required version bumped to 3.10 for automatic unit tests
      detection by CMake

Version 1.4 - 5 December 2020
    - Bugfixes
    - Renamed 'master' branch to 'main'    

Version 1.3 - 11 June 2020
    - Bugfix release

Version 1.2 - 13 May 2020
    - Minor incremental improvements/bugfixes

Version 1.1 - 8 April 2020
    - Added complete Windows support (including MSVC) + AppVeyor CI
    - Various minor bugfixes

Version 1.0 - 10 December 2019
    - Initial public release