@@ -1,0 +1,54 @@
+version: 2.1
+
+# CircleCI doesn't handle large file sets properly for local builds
+# https://github.com/CircleCI-Public/circleci-cli/issues/281#issuecomment-472808051
+localCheckout: &localCheckout
+  run: |-
+    PROJECT_PATH=$(cd ${CIRCLE_WORKING_DIRECTORY}; pwd)
+    mkdir -p ${PROJECT_PATH}
+    cd /tmp/_circleci_local_build_repo
+    git ls-files -z | xargs -0 -s 2090860 tar -c | tar -x -C ${PROJECT_PATH}
+    cp -a /tmp/_circleci_local_build_repo/.git ${PROJECT_PATH}
+
+jobs:
+  ubuntu_bionic:
+    description: A template for building and testing staq on Ubuntu Linux
+    machine:
+      image: ubuntu-2004:202010-01
+    steps:
+      - checkout # change this from "checkout" to "*localCheckout" when running CircleCI locally
+      - run:
+          name: Build the staq toolkit and the unit tests
+          command: |
+            mkdir build && cd build
+            cmake .. -DCMAKE_BUILD_TYPE=Debug && make -j4
+      - run:
+          name: Run the unit tests
+          command: |
+            cd build
+            make test
+
+  macOS:
+    description: A template for building and testing staq on macOS
+    macos:
+      xcode: "11.3.0"
+    steps:
+      - checkout # change this from "checkout" to "*localCheckout" when running CircleCI locally
+      - run:
+          name: Build the staq toolkit and the unit tests
+          command: |
+            mkdir build && cd build
+            cmake .. -DCMAKE_BUILD_TYPE=Debug && make -j4
+      - run:
+          name: Run the unit tests
+          command: |
+            cd build
+            make test
+
+workflows:
+  build:
+    jobs:
+      - ubuntu_bionic:
+          name: ubuntu-bionic
+#      - macOS:
+#          name: macOS-base
