@@ -1,50 +1,0 @@
-language: cpp
-dist: focal
-os: linux
-
-jobs:
-  include:
-    # Ubuntu Linux Focal Fosa 20.04, gcc-9.3
-    - os: linux
-      compiler: gcc
-      env:
-        - MATRIX_EVAL="CXX=g++ && CC=gcc"
-
-    # Ubuntu Linux Focal Fosa 20.04, clang-7.0
-    - os: linux
-      compiler: clang
-      before_install:
-        - export LD_LIBRARY_PATH=/usr/local/clang/lib:$LD_LIBRARY_PATH
-      env:
-        - MATRIX_EVAL="CXX=clang++ && CC=clang"
-
-    # macOS Catalina 10.15, AppleClang version 12.0.0 (clang-1200.0.32.2)
-    - os: osx
-      osx_image: xcode12
-      compiler: clang
-      env:
-        - MATRIX_EVAL="CXX=clang++ && CC=clang"
-
-    # macOS Catalina 10.15, gcc-10.2
-    - os: osx
-      osx_image: xcode12
-      compiler: gcc
-      env:
-        - MATRIX_EVAL="CXX=g++-10 && CC=gcc-10"
-
-notifications:
-  email: false
-
-before_install:
-  - eval "${MATRIX_EVAL}"
-
-script:
-  - $CXX --version
-
-  # Build the staq toolkit and the unit tests
-  - mkdir build
-  - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug && make -j4
-
-  # Run the unit tests
-  - make test
