@@ -4,6 +4,7 @@ Pre-release
       'GTEST_COLOR=1 ctest -V' for coloured verbose testing output.
     - CMake minimum required version bumped to 3.10 for automatic unit tests
       detection by CMake
+    - Switched continuous integration from Travis CI to CircleCI
 
 Version 1.4 - 5 December 2020
     - Bugfixes
